--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Welcome to Online Learning Platform</h1>
-    <a href="{{ url_for('register') }}">Register</a> | <a href="{{ url_for('login') }}">Login</a>
+    <a href="./register.html">Register</a> | <a href="./login.html">Login</a>
 </body>
 </html>
