--- a/register.html
+++ b/register.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Register</h1>
-    <form action="{{ url_for('register') }}" method="post">
+    <form action="./register.html" method="post">
         <label for="username">Username:</label>
         <input type="text" id="username" name="username" required>
         <button type="submit">Register</button>
