--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Login</h1>
-    <form action="{{ url_for('login') }}" method="post">
+    <form action="./login.html" method="post">
         <label for="username">Username:</label>
         <input type="text" id="username" name="username" required>
         <button type="submit">Login</button>
